<resources>
    <string name="app_name">Club deportivo</string>
    <string name="btnIngresar">Ingresar</string>
    <string name="btnLogin">Ingresar</string>
    <string name="logo">Descripción de la imagen</string>
    <string name="username_hint">Usuario</string>
    <string name="password_hint">Contraseña</string>
    <string name="title_activity_panel_principal">PanelPrincipal</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="inscribirActividad">Inscribir Actividad</string>
    <string name="menu_home">¿Quienes somos?</string>
    <string name="menu_inscripcion_cliente">Ingresar Cliente</string>
    <string name="menu_comprobante_pago">Comprobante de Pago</string>
    <string name="menu_visualizar_carnet">Visualizar Carnet</string>
    <string name="menu_Incripcion_de_actividades">Inscripcion de Actividades</string>
    <string name="menu_listar_cuotas_vencidas">Listar Cuotas Vencidas</string>
    <string name="menu_Abonar">Abonar Cuota</string>
    <string name="inscripcion_de_actividades">Inscripción de Actividades</string>
    <string name="abonar">Abonar</string>
    <string name="ingresar_cliente">Ingresar Cliente</string>
    <string name="comprobante_pago">Comprobante de Pago</string>
    <string name="listar_cuotas_vencidas">Listar Cuotas Vencidas</string>
    <string name="visualizar_carnet">Visualizar Carnet</string>
    <string name="cerrar_sesion">Cerrar Sesión</string>
    <string name="actividades_subtitle">Seleccion de Actividades</string>
    <string name="cuotas_subtitle">Seleccion de Cuotas</string>
    <string name="titulo">Registro de Clientes</string>
    <string name="tituloAptoFisico">Apto Fisico</string>
    <string name="btn_ingresar">Registrar</string>
    <string name="registro_de_clientes">Registro de Clientes</string>
    <string name="sin_morosos">Todos los clientes estan al dia.</string>

    <!--Ingresar Cliente-->
    <string name="inscripcion_title">Inscripción de Clientes</string>
    <string name="nombre_hint">Nombre</string>
    <string name="apellido_hint">Apellido</string>
    <string name="dni_hint">DNI</string>
    <string name="alias_hint">Alias</string>
    <string name="contraseña_hint">Contraseña</string>
    <string name="apto_fisico_text">Apto Físico</string>
    <string name="socio_text">Socio</string>
    <string name="no_socio_text">No Socio</string>
    <string name="siguiente_btn">Siguiente</string>

    <!--Abonar-->
    <string name="pago_hint">Seleccione un medio de pago</string>
    <string name="pago_txt">Importe</string>
    <string name="buscar_txt">Buscar cliente</string>
    <string name="metodo_de_pago">Método de pago</string>
    <string name="radioTarjeta">Tarjeta</string>
    <string name="radioEfectivo">Efectivo</string>
    <string name="btnPagar">Pagar</string>
    <string name="importe">-</string>
    <string name="buscar">Buscar por Dni</string>
    <string name="buscar_btn">Buscar</string>
    <string name="reset_btn">Reset</string>
    <string-array name="arrayCuotas">
        <item>1 Cuota</item>
        <item>3 Cuotas</item>
        <item>6 Cuotas</item>
    </string-array>

    <string-array name="arrayActividades">
        <item>Natación</item>
        <item>Yoga</item>
        <item>Fútbol</item>
        <item>Gimnasio</item>
        <item>Spinning</item>
    </string-array>

    <!--Comprobante-->
    <string name="comprobante">Comprobante nº %1$s</string>
    <string name="nombre_completo">%1$s %2$s</string>
    <string name="monto_abonado">$ %1$.2f</string>
    <string name="cuota">%1$s</string>
    <string name="fecha_pago">Fecha de Pago</string>
    <string name="monto">Importe Abonado</string>
    <string name="comprobante_btn">Ver Carnet</string>

    <!--Carnet-->
    <string name="carnet_txt">Carnet</string>
    <string name="carnet_subtitle">Club Deportivo Breaking Code</string>
    <string name="descripcion">descripcion</string>
    <string name="carnet_nombre">Nombre Completo</string>
    <string name="carnet_cuota">Pago</string>
    <string name="carnet_pago">Ultimo Pago</string>
    <string name="carnet_btn">Finalizar</string>

    <string name="ok">OK</string>
    <string name="si">Si</string>
    <string name="radioSocio">Descripcion Socio</string>
    <string name="radioNoSocio">Descripcion No Socio</string>
    <string name="descripcion_button">Descripción del botón para inscribir</string>
    <string name="inscribir_actividad">Inscribir Actividad</string>
    <string name="descripcion_dni">Campo para ingresar DNI</string>
    <string name="titleFinalizarRegistroInscripcion">Finalizar Registro de Inscripción</string>
    <string name="incribir_button">Inscribir</string>
    <string name="stringActividades">Seleccioná la actividad</string>
    <string name="btnMenuAnterior">Menú Anterior</string>
    <string name="titulo_morosos">"Listado de Morosos"</string>
    <string name="volver">Volver</string>
    <string name="dni_text">DNI</string>
    <string name="m_todo_de_pago">Método de Pago</string>
    <string name="efectivo">Efectivo</string>
    <string name="tarjeta">Tarjeta</string>
    <string name="selecci_n_de_actividades">Selección de Actividades</string>
    <string name="pagar_btn">Pagar</string>
    <string name="pagos_title">Registro de Pagos</string>

</resources>