<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingHorizontal="30dp"
    tools:context=".ui.abonar.AbonarFragment"
    android:background="@color/white">

    <TextView
        style="@style/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pagos_title" />

    <EditText
        android:id="@+id/etDNI"
        style="@style/editText"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="6dp"
        android:autofillHints="DNI"
        android:background="@drawable/rounded_corner"
        android:hint="@string/dni_hint"
        android:inputType="number" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/metodo_de_pago"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <RadioGroup
            android:id="@+id/rgPago"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="14dp"
            android:paddingHorizontal="10dp">

            <RadioButton
                android:id="@+id/rbEfectivo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:paddingHorizontal="10dp"
                android:text="@string/radioEfectivo"
                android:textSize="16sp"
                app:buttonTint="@color/accent"/>

            <RadioButton
                android:id="@+id/rbTarjeta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingHorizontal="10dp"
                android:text="@string/radioTarjeta"
                android:textSize="16sp"
                app:buttonTint="@color/accent_text"/>
        </RadioGroup>

    </LinearLayout>

    <TextView
        android:id="@+id/tvCuotas"
        style="@style/subtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/cuotas_subtitle" />

    <Spinner
        android:id="@+id/spCuotas"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"

        android:entries="@array/arrayCuotas"
        android:padding="14dp"
       style="@style/CustomSpinnerStyle"
        android:spinnerMode="dropdown" />

    <TextView
        android:id="@+id/tvActividad"
        style="@style/subtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/actividades_subtitle"
        android:visibility="gone" />

    <Spinner
        android:id="@+id/spActividades"
        android:layout_width="320dp"
        android:layout_height="48dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/rounded_corner"
        android:entries="@array/arrayActividades"
        android:padding="12dp"
        android:spinnerMode="dropdown"
        android:visibility="gone" />

    <androidx.cardview.widget.CardView
        android:id="@+id/viewResult"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        app:cardBackgroundColor="@color/secondary"
        app:cardCornerRadius="16dp">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="16dp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pago_txt"
                android:textAllCaps="true"
                android:textColor="@color/title_text"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvImporte"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/importe"
                android:textColor="@color/white"
                android:textSize="35sp"
                android:textStyle="bold"
                tools:text="$ 0.00" />

            <TextView
                android:id="@+id/tvDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:text="@string/buscar_txt"
                android:textAllCaps="true"
                android:textColor="@color/accent_text"
                android:textSize="20sp"
                android:textStyle="bold"
                tools:text="Buscar cliente" />

        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnReset"
            style="@style/button"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/accent"
            android:text="@string/reset_btn"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/btnBuscar"
            style="@style/button"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:text="@string/buscar_btn" />

        <Button
            android:id="@+id/btnPagar"
            style="@style/button"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:text="@string/btnPagar"
            android:visibility="gone" />
    </LinearLayout>
</androidx.appcompat.widget.LinearLayoutCompat>
