<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.finalizarinscripcion.FinalizarInscripcionFragment">

    <LinearLayout
        android:layout_width="347dp"
        android:layout_height="674dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Space
            android:layout_width="match_parent"
            android:layout_height="29dp" />

        <TextView
            android:id="@+id/titleFinalizarRegistroInscripcion"
            style="@style/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:text="@string/titleFinalizarRegistroInscripcion"
            android:textAlignment="center" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/ConstraintDNI"
            android:layout_width="match_parent"
            android:layout_height="78dp">

            <EditText
                android:id="@+id/editTextDNI"
                style="@style/editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="DNI"
                android:padding="12dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.322"
                android:hint="@string/dni_hint"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/radioSocio"
                android:layout_width="100dp"
                android:layout_height="48dp"
                android:text="@string/socio"
                android:textAlignment="center"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.223"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.333" />

            <RadioButton
                android:id="@+id/radioNoSocio"
                android:layout_width="133dp"
                android:layout_height="48dp"
                android:text="@string/no_socio"
                android:textAlignment="center"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.406"
                app:layout_constraintStart_toEndOf="@+id/radioSocio"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/titleMetodoDePago"
                android:layout_width="160dp"
                android:layout_height="59dp"
                android:layout_marginEnd="24dp"
                android:layout_weight="1"
                android:text="@string/metodo_de_pago"
                android:textAlignment="viewEnd"
                android:textSize="16sp"
                android:textStyle="bold"
                android:translationX="5sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/radioEfectivo"
                app:layout_constraintHorizontal_bias="0.684"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <RadioButton
                android:id="@+id/radioTarjeta"
                android:layout_width="133dp"
                android:layout_height="48dp"
                android:text="@string/radioTarjeta"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.85"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1.0" />

            <RadioButton
                android:id="@+id/radioEfectivo"
                android:layout_width="133dp"
                android:layout_height="48dp"
                android:text="@string/radioEfectivo"
                app:layout_constraintBottom_toTopOf="@+id/radioTarjeta"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.85"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1.0" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="72dp">

            <Spinner
                android:id="@+id/spinnerActividades"
                android:layout_width="264dp"
                android:layout_height="61dp"
                android:entries="@array/arrayActividades"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btnMenuAnterior"
                style="@style/button"
                android:layout_width="202dp"
                android:layout_height="48dp"
                android:text="@string/btnMenuAnterior"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.432" />

            <Button
                android:id="@+id/btnPagar"
                style="@style/button"
                android:layout_width="199dp"
                android:layout_height="55dp"
                android:text="@string/btnPagar"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.087" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>