<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="22dp"
    tools:context=".ui.visualizarcarnet.VisualizarCarnetFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="0dp"
        android:layout_height="610dp"
        android:layout_marginTop="25dp"
        app:cardBackgroundColor="@color/card"
        app:cardCornerRadius="35dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp">

            <ImageView
                android:id="@+id/imageProfile"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:background="@drawable/rounded_card"
                android:contentDescription="@string/descripcion"
                android:padding="8dp"
                android:scaleType="centerCrop"
                android:src="@drawable/carnet"
                app:layout_constraintBottom_toTopOf="@+id/linea1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/imageProfile" />

            <TextView
                android:id="@+id/tvClubName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:text="@string/carnet_subtitle"
                android:textColor="@color/white_dim"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@id/imageProfile"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/imageProfile"
                app:layout_constraintTop_toTopOf="@id/imageProfile" />

            <View
                android:id="@+id/linea1"
                android:layout_width="0dp"
                android:layout_height="3dp"
                android:layout_marginVertical="16dp"
                android:background="@color/card_line"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/imageProfile" />

            <TextView
                android:id="@+id/tvNombreCompleto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:text="@string/carnet_nombre"
                android:textColor="@color/white_dim"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/linea1" />

            <TextView
                android:id="@+id/tvNombreCliente"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:textColor="@color/white_dim"
                android:textSize="28sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvNombreCompleto"
                tools:text="Carlos Calvo Cabello" />

            <TextView
                android:id="@+id/tvDNI"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:text="@string/dni_text"
                android:textColor="@color/white_dim"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvNombreCliente" />

            <TextView
                android:id="@+id/tvDniNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:textColor="@color/white_dim"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvDNI"
                tools:text="35604005" />

            <TextView
                android:id="@+id/tvCuota"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:text="@string/carnet_cuota"
                android:textColor="@color/white_dim"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvNombreCliente" />

            <TextView
                android:id="@+id/tvCuotaTipo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:textColor="@color/white_dim"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvCuota"
                tools:text="Mensual" />

            <View
                android:id="@+id/linea2"
                android:layout_width="0dp"
                android:layout_height="3dp"
                android:layout_marginVertical="16dp"
                android:layout_marginTop="14dp"
                android:background="@color/card_line"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvCuotaTipo" />

            <TextView
                android:id="@+id/tvUltimoPago"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:text="@string/carnet_pago"
                android:textColor="@color/white_dim"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/linea2" />

            <TextView
                android:id="@+id/tvFechaPago"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:textColor="@color/white_dim"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvUltimoPago"
                tools:text="10/09/2024" />

            <ImageView
                android:id="@+id/qrCodeImage"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginTop="18dp"
                android:background="@drawable/rounded_transparent"
                android:clipToOutline="true"
                android:contentDescription="@string/descripcion"
                android:scaleType="centerCrop"
                android:src="@drawable/qr"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvFechaPago"
                tools:ignore="UnusedAttribute" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <ImageView
            android:id="@+id/logoImage"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_gravity="bottom"
            android:background="@color/black"
            android:contentDescription="@string/descripcion"
            android:scaleType="fitCenter"
            android:src="@drawable/breakingcodeinvertido" />

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/btnFinish"
        style="@style/button"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:text="@string/carnet_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>